--- a/第五周/w5_ten/pom.xml
+++ b/第五周/w5_ten/pom.xml
@@ -28,7 +28,11 @@
             <artifactId>spring-native</artifactId>
             <version>${spring-native.version}</version>
         </dependency>-->
-
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
