--- a/第七周/w7_nine/pom.xml
+++ b/第七周/w7_nine/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.example.demo</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>h7_nine</name>
     <description>demo</description>
     <properties>
         <java.version>1.8</java.version>
