--- a/第八周/w8_six/src/main/resources/application.properties
+++ b/第八周/w8_six/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.shardingsphere.sharding.tables.user.key-generator.type=SNOWFLAKE
 
 spring.shardingsphere.sharding.default-data-source-name=ds0
 spring.shardingsphere.props.sql.show=true
+
+
+server.address=127.0.0.1
+server.port=7777
