--- a/第八周/w8_six/src/main/resources/application.properties
+++ b/第八周/w8_six/src/main/resources/application.properties
@@ -1,12 +1,15 @@
+server.address=127.0.0.1
+server.port=7777
+
 spring.shardingsphere.datasource.names=ds0,ds1
 
-spring.shardingsphere.datasource.ds0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://127.0.0.1:3306/demo?useSSL=false
 spring.shardingsphere.datasource.ds0.username=root
 spring.shardingsphere.datasource.ds0.password=Root123
 
-spring.shardingsphere.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds1.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds1.jdbc-url=jdbc:mysql://127.0.0.1:3306/demo1?useSSL=false
 spring.shardingsphere.datasource.ds1.username=root
@@ -26,5 +29,3 @@ spring.shardingsphere.sharding.default-data-source-name=ds0
 spring.shardingsphere.props.sql.show=true
 
 
-server.address=127.0.0.1
-server.port=7777
